--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -260,6 +260,8 @@
 }
 
 /**** READING LIST ********/
+/**** READING LIST ********/
+/**** READING LIST ********/
 .readinglist-wrap {
   background-color: #f4f7f9;
   min-height: 100vh;
@@ -297,6 +299,7 @@
   background-color: white;
   padding: 10px 30px 5px 30px;
   margin-top: 25px;
+  border-radius: 8px;
 }
 .rl-card-titlebar {
   display: flex;
