--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -114,10 +114,11 @@
 /***** HEADER *****/
 /***** HEADER *****/
 .headerwrap {
-  height: 60px;
+  min-height: 60px;
   width: 100%;
   max-width: 100vw;
   display: flex;
+  flex-direction: column;
   border-bottom: 1px solid #eaeaea;
   background-color: #ffffff;
   justify-content: space-around;
@@ -125,19 +126,59 @@
   z-index: 10;
   @include for-desktop-up {
     justify-content: space-between;
+    flex-direction: row;
     align-items: center;
   }
 }
+.mobile-menu-extension {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  min-height: 5vh;
+  background-color: #ffffff;
+  border-radius: 4px;
+  margin: auto 0;
+  border-radius: 0px;
+  @include for-desktop-up {
+    display: none;
 
-.headerlogowrap {
+    width: 350px;
+    border-radius: 0px;
+  }
+}
+.extension-mobile-text {
+  margin: auto 0 auto 15px;
+}
+.extension-mobile-wrap {
+  height: 20px;
+  width: 20px;
+  margin: 5px 0 5px 15px;
+  position: relative;
+}
+.extension-mobile {
+  display: flex;
+  margin: auto 0 5px 0;
+}
+.headerlogowrap-desktop {
+  display: none;
+  @include for-desktop-up {
+    display: flex;
+    height: auto;
+    align-content: center;
+    justify-content: center;
+
+    padding-left: 15px;
+    margin: 0;
+  }
+}
+.headerlogowrap-mobile {
   display: flex;
   height: auto;
   align-content: center;
   justify-content: center;
   margin: auto;
   @include for-desktop-up {
-    padding-left: 15px;
-    margin: 0;
+    display: none;
   }
 }
 .headerlogo {
