--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -329,3 +329,13 @@
   display: block;
   position: relative;
 }
+.signup-button {
+  border: px solid #1ac182;
+  background-color: #7621d8;
+  box-shadow: 2px 2px 2px #7621d8;
+  color: white;
+  font-size: 40px;
+  width: 350px;
+  margin: 40px auto;
+  border-radius: 20px;
+}
