--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -3,12 +3,12 @@
 /** Font Style Components**/
 .font-category-header {
   font-size: 30px;
-  color: #1ac182;
+  color: $nutshell_green;
   font-family: "Sanchez", serif;
 }
 .font-title-header {
   font-size: 48px;
-  color: #1ac182;
+  color: $nutshell_green;
   font-family: "Sanchez", regular;
   margin: auto;
   margin: auto 10px;
@@ -211,7 +211,7 @@
 .article-bullet-citation {
   margin: 15px 0 0 15px;
   font-size: 12px;
-  color: #7621d8;
+  color: $nutshell_purple;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
 }
@@ -250,13 +250,32 @@
 .about-content-wrap {
   display: flex;
   flex-direction: column;
-  width: 850px;
+  max-width: 850px;
   background-color: #ffffff;
   margin: 0 auto;
   padding: 15px;
 }
 .about-text {
   padding: 15px 0px 5px 0px;
+}
+.about-title-header {
+  font-size: 48px;
+  color: $nutshell_green;
+  font-family: "Sanchez", regular;
+  margin: auto;
+  margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100vw;
+  @include for-desktop-up {
+    margin-left: 0;
+  }
+}
+.font-about-header {
+  font-size: 30px;
+
+  color: $nutshell_purple;
+  font-family: "Sanchez", serif;
 }
 
 /**** READING LIST ********/
@@ -330,12 +349,12 @@
   position: relative;
 }
 .signup-button {
-  border: px solid #1ac182;
-  background-color: #7621d8;
-  box-shadow: 2px 2px 2px #7621d8;
-  color: white;
-  font-size: 40px;
-  width: 350px;
-  margin: 40px auto;
+  border: 1px solid black;
+  background-color: black;
+  box-shadow: 0px 2px 0px black;
+  color: $nutshell_green;
+  font-size: 20px;
+  width: 200px;
+  margin: 20px auto;
   border-radius: 20px;
 }
