--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -10,9 +10,9 @@
   @include for-tablet-landscape-up {
     flex-direction: row;
     margin: 25px 0 0 25px;
+    flex-wrap: wrap;
   }
 }
-
 .category-home-vertical {
   text-align: center;
   display: flex;
@@ -20,6 +20,7 @@
   margin: 0 auto;
   @include for-tablet-landscape-up {
     margin: 0;
+    margin-bottom: 25px;
     padding: 0;
   }
 }
@@ -71,7 +72,6 @@
   border-radius: 10px 10px 0 0;
   overflow: hidden;
   display: flex;
-
   width: 300px;
   height: 60px;
 
