--- a/styles/HeaderFooter.module.scss
+++ b/styles/HeaderFooter.module.scss
@@ -89,6 +89,7 @@
   font-weight: bold;
   margin: auto;
   font-family: "Raleway", sans-serif;
+  cursor: pointer;
 }
 .headerbuttonslist {
   display: none;
