--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -37,6 +37,7 @@
 }
 .full-home-card-open {
   margin: 10px 0 20px 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .font-category-header {
   padding: 10px 0 10px 0px;
@@ -48,6 +49,7 @@
   }
 }
 .home-post-card {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
   display: flex;
   margin: 10px 0;
