--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -85,6 +85,7 @@
     width: 850px;
     margin: 20px 40px 2vh 450px;
     padding: 30px 30px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   }
 }
 .post-category-text {
@@ -253,8 +254,9 @@
   flex-direction: column;
   max-width: 850px;
   background-color: #ffffff;
-  margin: 0 auto;
+  margin: auto;
   padding: 15px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .about-text {
   padding: 15px 0px 5px 0px;
