--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -34,10 +34,15 @@
 /***** HOME POST CARD *****/
 .full-home-card {
   margin: 10px 0;
+
+  :hover {
+    background-color: $bg-green;
+  }
 }
 .full-home-card-open {
   margin: 10px 0 20px 0;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 .font-category-header {
   padding: 10px 0 10px 0px;
@@ -84,6 +89,7 @@
     margin: 15px 0 0 0px;
     background-color: #ffffff;
     border-radius: 10px 10px 0 0;
+    background-color: $bg-yellow;
   }
 }
 .post-card-bookmark {
@@ -94,7 +100,7 @@
   @include for-tablet-landscape-up {
     margin: auto 15px;
     width: 45px;
-    height: 35px;
+    height: 30px;
   }
 }
 .post-title {
@@ -176,6 +182,7 @@
     display: flex;
     width: 350px;
     border-radius: 0px;
+    background-color: $bg-yellow;
   }
 }
 .extension-subheader {
