--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -253,10 +253,14 @@
   display: flex;
   flex-direction: column;
   max-width: 850px;
-  background-color: #ffffff;
+  min-height: calc(100vh - 148px);
   margin: auto;
-  padding: 15px;
+}
+.about-content {
+  margin: auto;
+  padding: 20px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
 }
 .about-text {
   padding: 15px 0px 5px 0px;
