--- a/styles/HeaderFooter.module.scss
+++ b/styles/HeaderFooter.module.scss
@@ -109,6 +109,21 @@
 .headerbuttons {
   font-size: 125%;
   font-weight: 600;
+  transform: translate(0, -5%);
+  :after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 95%;
+    margin-left: 2.5%;
+    height: 2px;
+    background: darken($color: $nutshell_purple, $amount: 3);
+    transition: transform 0.2s ease-in-out;
+    transform: scale(0);
+  }
+  :hover:after {
+    transform: scale(1);
+  }
 }
 .headersearchwrap {
   display: none;
