--- a/styles/CurrentEventsCard.module.scss
+++ b/styles/CurrentEventsCard.module.scss
@@ -17,7 +17,7 @@
   margin: 0vh 0 10px 20px;
   width: 100vw;
   @include for-tablet-landscape-up {
-    margin: 0 25px 0 25px;
+    margin: 0 0px 0 25px;
   }
   .ce-card-wrap {
     display: flex;
@@ -29,7 +29,7 @@
       width: calc(100vw - 75px);
     }
   }
-  & ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     display: none;
   }
 }
@@ -57,7 +57,7 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 
   @include for-tablet-landscape-up {
-    margin: 0px 0 0 25px;
+    margin-right: 25px;
     width: 400px;
   }
 }
@@ -97,7 +97,8 @@
   font-size: 16px;
   margin: 1.5vh 3vw 0 3vw;
   height: 225px;
-  overflow: scroll;
+  overflow: hidden;
+
   @include for-tablet-landscape-up {
     margin: 15px 15px 0 15px;
     height: 100%;
@@ -110,5 +111,36 @@
   height: 14px;
   @include for-tablet-landscape-up {
     margin: 15px 0 15px 15px;
+  }
+}
+.ce-horizontal-wrap {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  @include for-tablet-landscape-up {
+    padding-left: 25px;
+  }
+  ::-webkit-scrollbar {
+    display: flex;
+    height: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: $nutshell_green;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: $nutshell_purple;
+    border-radius: 10px;
+    border: 3px solid $bg-green;
+  }
+}
+.next-button {
+  right: 0;
+  margin: auto 0;
+
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  :hover {
+    transform: translateX(25px);
   }
 }
