--- a/styles/CurrentEventsCard.module.scss
+++ b/styles/CurrentEventsCard.module.scss
@@ -18,6 +18,7 @@
   width: 100vw;
   @include for-tablet-landscape-up {
     margin: 0 0px 0 25px;
+    padding-right: 100px;
   }
   .ce-card-wrap {
     display: flex;
@@ -27,6 +28,7 @@
 
     @include for-tablet-landscape-up {
       width: calc(100vw - 75px);
+      padding: 10px 0 35px 0;
     }
   }
   ::-webkit-scrollbar {
@@ -57,7 +59,7 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 
   @include for-tablet-landscape-up {
-    margin-right: 25px;
+    margin: 0px 25px 0 0px;
     width: 400px;
   }
 }
@@ -97,7 +99,7 @@
   font-size: 16px;
   margin: 1.5vh 3vw 0 3vw;
   height: 225px;
-  overflow: hidden;
+  overflow: hide;
 
   @include for-tablet-landscape-up {
     margin: 15px 15px 0 15px;
@@ -118,19 +120,20 @@
   justify-content: space-between;
   width: 100%;
   @include for-tablet-landscape-up {
-    padding-left: 25px;
+    margin: 0 25px;
+
     ::-webkit-scrollbar {
       display: flex;
-      height: 10px;
+      height: 8px;
     }
     ::-webkit-scrollbar-track {
       border-radius: 10px;
-      background: $nutshell_green;
+      background: $nutshell_purple;
     }
     ::-webkit-scrollbar-thumb {
-      background-color: $nutshell_purple;
+      background-color: $bg-green;
       border-radius: 10px;
-      border: 3px solid $bg-green;
+      border: 3px solid $nutshell_green;
     }
   }
 }
