--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -31,8 +31,9 @@
   min-height: 100vh;
   margin-top: 60px;
   @include for-desktop-up {
-    min-height: calc(100vh - 148px);
+    height: calc(100vh - 140px);
     height: 100%;
+    overflow-y: hidden;
   }
 }
 
