--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -47,6 +47,6 @@
 
 $nutshell_green: #1ac182;
 $nutshell_purple: #7621d8;
-$bg-purple: #b393d8;
+$bg-purple: #f0edf3;
 $bg-green: #dbf2e9;
 $bg-yellow: #fafad2;
