--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -170,6 +170,8 @@
   flex-direction: column;
   border-radius: 0 0 10px 10px;
   overflow: hidden;
+  padding-bottom: 8px;
+  background-color: #ffffff;
 }
 .home-post-card-extension {
   display: flex;
