--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -197,6 +197,7 @@
 .extension-subheader-text {
   margin: auto 0;
   font-weight: 600;
+  text-align: left;
 }
 .extension-logo-wrap {
   height: 25px;
