--- a/styles/HeaderFooter.module.scss
+++ b/styles/HeaderFooter.module.scss
@@ -171,7 +171,13 @@
     margin-right: 15px;
   }
 }
-
+.headersearchtext-wrap,
+.headersearchtext {
+  border: none;
+  margin: auto;
+  width: 90%;
+  background-color: #e8efee;
+}
 /***** FOOTER *****/
 /***** FOOTER *****/
 /***** FOOTER *****/
