--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -56,7 +56,9 @@
   @include for-desktop-up {
     margin-top: 5vh;
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
   }
 }
 
