--- a/styles/Components.module.scss
+++ b/styles/Components.module.scss
@@ -178,6 +178,7 @@
   flex-direction: column;
   border-radius: 0 0 10px 10px;
   overflow: hidden;
+  width: 350px;
   padding-bottom: 8px;
   background-color: #ffffff;
 }
