--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -26,7 +26,7 @@
   height: 100%;
 }
 .main {
-  background-color: #f4f7f9;
+  background-color: $nutshell_purple;
   min-height: 100vh;
   padding-top: 60px;
   @include for-desktop-up {
@@ -78,8 +78,7 @@
 .article-main-card {
   width: 100vw;
   background-color: #ffffff;
-
-  border-radius: 4px;
+  border-radius: 10px;
   padding: 15px 0 0 0;
 
   @include for-desktop-up {
@@ -145,9 +144,6 @@
   cursor: pointer;
   @include for-desktop-up {
     margin-left: 0;
-    :hover {
-      transform: scale(0.99);
-    }
   }
 }
 .accordion-header-open {
@@ -157,9 +153,6 @@
   cursor: pointer;
   @include for-desktop-up {
     margin-left: 0;
-    :hover {
-      transform: scale(0.99);
-    }
   }
 }
 .subheader-text {
@@ -168,6 +161,7 @@
   font-weight: 700;
   margin: 0;
   width: 100%;
+  color: black;
   display: flex;
   justify-content: space-between;
 }
@@ -175,9 +169,8 @@
   position: relative;
   display: flex;
   justify-content: right;
-  opacity: 0.6;
-  width: 13px;
-  max-width: 13px;
+  width: 12px;
+  max-width: 18px;
   height: 15px;
   margin: auto;
   transition: all 2 linear;
@@ -186,9 +179,8 @@
   position: relative;
   display: flex;
   justify-content: flex-end;
-  opacity: 0.6;
-  width: 13px;
-  height: 13px;
+  width: 12px;
+  height: 18px;
   margin: auto;
   transform: rotate(90deg);
 }
@@ -206,6 +198,7 @@
   height: 19px;
   min-width: 19px;
   min-height: 19px;
+  margin-top:2px;
 }
 .article-bullet-text {
   display: flex;
@@ -216,7 +209,7 @@
   font-size: 17px;
   height: auto;
   font-family: "Montserrat", sans-serif;
-  color: #364463;
+  color: black;
 }
 .article-bullet-citation {
   margin: 15px 0 0 15px;
@@ -224,6 +217,10 @@
   color: $nutshell_purple;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  :hover {
+    color:$nutshell-green
+  }
+  
 }
 .article-content-bottom-border {
   border-top: 3px #f4f7f9 solid;
@@ -266,7 +263,8 @@
 }
 .about-content {
   margin: auto;
-  padding: 20px;
+  padding: 3rem 4rem;
+  border-radius: 1rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
@@ -277,8 +275,8 @@
   font-size: 48px;
   color: $nutshell_green;
   font-family: "Sanchez", regular;
-  margin: auto;
-  margin-bottom: 15px;
+  margin: 0 auto;
+  margin-bottom: -5px;
   display: flex;
   flex-wrap: wrap;
   max-width: 100vw;
@@ -288,7 +286,7 @@
 }
 .font-about-header {
   font-size: 30px;
-
+  margin-top: 20px;
   color: $nutshell_purple;
   font-family: "Sanchez", serif;
 }
