--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -46,7 +46,7 @@
 }
 
 $nutshell_green: #1ac182;
-$nutshell_purple: #7621d8;
-$bg-purple: #f0edf3;
+$nutshell_purple: #364463;
+$bg-purple: #364463;
 $bg-green: #dbf2e9;
 $bg-yellow: #fafad2;
