--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -262,11 +262,14 @@
   margin: auto;
 }
 .about-content {
-  margin: auto;
+  margin: 10px;
   padding: 3rem 4rem;
   border-radius: 1rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
+  @include for-tablet-landscape-up{
+    margin: auto;
+  }
 }
 .about-text {
   padding: 10px 0px 5px 0px;
