--- a/styles/Pages.module.scss
+++ b/styles/Pages.module.scss
@@ -262,7 +262,7 @@
   margin: auto;
 }
 .about-content {
-  margin: 10px;
+  margin: 20px 10px;
   padding: 3rem 4rem;
   border-radius: 1rem;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
