--- a/styles/HeaderFooter.module.scss
+++ b/styles/HeaderFooter.module.scss
@@ -85,8 +85,9 @@
   position: relative;
   width: 2.5rem;
   height: 2.5rem;
-  margin:auto;
+  margin: auto;
   margin-right: 5px;
+  padding: auto;
 }
 .headertitle {
   font-size: 200%;
@@ -201,6 +202,8 @@
 .footer-left {
   display: flex;
   justify-content: space-around;
+  padding: 0;
+  margin: 0;
 }
 .footerlogowrap {
   padding-left: 20px;
@@ -212,6 +215,13 @@
   :hover{
     color:$nutshell_purple
   } 
+}
+.footer-logo {
+  height: 30px;
+  width: 30px;
+  margin: 0 auto;
+  margin-right: 5px;
+  position: relative;
 }
 .footer-title {
   font-size: 20px;
@@ -232,14 +242,6 @@
   :hover{
     color:$nutshell_purple
   } 
-}
-.footer-logo {
-  height: 30px;
-  width: 30px;
-
-  margin: 0 auto;
-  margin-right: 5px;
-  position: relative;
 }
 .footerbuttonslist {
   display: flex;
